# nexus-zkvm

./: .all-contributorsrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  log-output  objdump-log  rust-toolchain.toml  rustfmt.toml  test_srs.zst
api/: Cargo.toml  README.md
api/examples/: hypernova_run.rs  nova_run.rs  nvm_run.rs  prover_run.rs  riscv_run.rs
api/src/: lib.rs
api/src/config/: mod.rs  vm.rs
api/src/prover/: circuit.rs  key.rs  mod.rs  pp.rs  pp.rs~  srs.rs  types.rs
benchmarks/: Cargo.toml
benchmarks/benches/: integration_bench.rs
benchmarks/src/: graph.rs  lib.rs  models.rs  paths.rs  runner.rs  utils.rs
cli/: Cargo.toml
cli/progress-bar/: Cargo.toml
cli/progress-bar/src/: terminal.rs  thread.rs
cli/src/: lib.rs  utils.rs
cli/src/command/: compress.rs  host.rs  jolt.rs  mod.rs  new.rs  prove.rs  public_params.rs  request.rs  run.rs  spartan_key.rs  verify.rs
common/: Cargo.toml
common-testing/: Cargo.toml
common-testing/src/: emulator.rs  lib.rs
common/src/: lib.rs
common/src/constants/: constants.rs  mod.rs
common/src/cpu/: mod.rs  pc.rs  registers.rs  traits.rs
common/src/error/: memory.rs  mod.rs  opcode.rs
common/src/memory/: alignment.rs  mod.rs  (+1 more)
config/: Cargo.toml
config/bases/: network.toml  rust.toml  vm.toml
config/serde_wrapper/: Cargo.toml
config/src/: error.rs  lib.rs  misc.rs  mod.rs~  network.rs  vm.rs
core/: Cargo.toml  README.md
core/benches/: riscv_machine.rs
core/examples/: hypernova_run.rs  nova_run.rs  nvm_run.rs
core/src/: lib.rs
dummy_program/: Cargo.toml
dummy_program/src/: lib.rs  main.rs
examples/: .gitignore  Cargo.toml  README.md  repro.sh
examples/.cargo/: config.toml
examples/legacy/: Cargo.toml  README.md
examples/src/: fact.rs  fib.rs  fib_input.rs  input_output.rs  keccak_input.rs  main.rs
jolt/: Cargo.toml
jolt/src/: convert.rs  error.rs  lib.rs  main.rs  parse.rs  trace.rs
macro/: Cargo.toml  README.md
macro/profiler/: Cargo.toml  README.md
macro/src/: lib.rs  pprof.rs
msnova/: Cargo.toml
msnova/src/: main.rs
network/: Cargo.toml  README.md
network/res/: index.html  nexus.js  style.css
network/src/: api.rs  bin.rs  client.rs  lib.rs  pcd.rs  ws.rs
nexus-prover/: Cargo.toml
nexus-prover/benches/: cubic.rs  genpp.rs
nexus-prover/src/: circuit.rs  error.rs  lib.rs  main.rs  pp.rs  types.rs
nova/: Cargo.toml  README.md
nova-benches/: Cargo.toml  README.md
nova-benches/bench-results/: microsoft.txt  nexus.txt
nova-benches/benches/: hypernova.rs  nova.rs  nova_public_parameter_generation.rs  recursive-snark.rs
nova/src/: absorb.rs  commitment.rs  lib.rs  sparse.rs  utils.rs
nvm/: Cargo.toml
nvm/src/: circuit.rs  error.rs  eval.rs  instructions.rs  lib.rs  memory.rs  riscv.rs  trace.rs
precompiles/: Cargo.toml  design.md
precompiles/macros/: Cargo.toml
precompiles/src/: lib.rs  traits.rs  types.rs
precompiles/tests/: integration.rs  integration_test.rs
prover/: Cargo.toml  README.md  small_test_srs.zst
prover-benches/: Cargo.toml  README.md
prover-benches/benches/: interaction_trace.rs  stark_prove.rs  trace_gen.rs
prover/benches/: cubic.rs  genpp.rs
prover/examples/: addition.rs  fibonacci.rs  nanofib.rs  permutation.rs  prove.rs
prover/macros/: Cargo.toml
prover/src/: circuit.rs  column.rs  components.rs  error.rs  key.rs  lib.rs  machine.rs  main.rs  null_schemes.rs  pp.rs  srs.rs  test_utils.rs  traits.rs  types.rs  utils.rs  virtual_column.rs
riscv/: Cargo.toml
riscv-circuit/: .rustfmt.toml  Cargo.toml
riscv-circuit/src/: lib.rs  main.rs  q.rs  r1cs.rs  riscv.rs
riscv/src/: error.rs  eval.rs  lib.rs  machines.rs  main.rs  nvm.rs  rv32.rs  tests.rs  vm.rs
runtime/: .gitignore  Cargo.toml  README.md  asm.S  assemble.sh  build.rs  link.x
runtime/.cargo/: config.toml
runtime/examples/: basic.rs
runtime/linker-scripts/: README.md  default.x  jolt.x
runtime/macros/: Cargo.toml
runtime/src/: alloc.rs  ecalls.rs  error.rs  io.rs  lib.rs  runtime.rs
sdk/: Cargo.toml  README.md  lib.rs  traits.rs
sdk/benches/: nova_public_parameter_generation.rs
sdk/example/: nova.rs
sdk/examples/: hypernova.rs  jolt.rs  legacy_hypernova.rs  legacy_jolt.rs  legacy_nova_build.rs  legacy_nova_io.rs  legacy_nova_nobuild.rs  nova.rs  nova_build.rs  nova_io.rs  nova_nobuild.rs  stwo_build.rs  stwo_instrument.rs  stwo_io.rs  stwo_nobuild.rs
sdk/macros/: Cargo.toml  README.md
sdk/nova/: seq.rs
sdk/src/: compile.rs  error.rs  lib.rs  traits.rs  utils.rs  views.rs
spartan/: .gitignore  CONTRIBUTING.md  Cargo.toml  NOTICE.md  README.md  dhat_spartan.txt  rust-toolchain  supernova-spartan.code-workspace
spartan/.cargo/: config.toml
spartan/benches/: committed_relaxed_snark.rs  nizk.rs  snark.rs
spartan/examples/: cubic.rs
spartan/profiler/: committed_relaxed_snark_hyrax.rs  committed_relaxed_snark_zm.rs  nizk.rs  snark.rs
spartan/src/: commitments.rs  committed_relaxed_snark.rs  crr1cs.rs  crr1csproof.rs  dense_mlpoly.rs  errors.rs  hyrax.rs  lib.rs  polycommitments.rs  product_tree.rs  r1csinstance.rs  r1csproof.rs  random.rs  sparse_mlpoly.rs  sumcheck.rs  transcript.rs  unipoly.rs
supernova/: Cargo.toml  README.md
supernova/.github/: checkout.sh
supernova/benches/: recursive-snark.rs
supernova/src/: absorb.rs  commitment.rs  lib.rs  nifs.rs  pedersen.rs  r1cs.rs  utils.rs
supernova/supernova-benches/: Cargo.toml
tools/: Cargo.toml
tools/src/: cargo-nexus.rs  lib.rs  new.rs  nexus-run.rs  options.rs  prove.rs  run.rs  template.rs  util.rs
tools/tools-dev/: Cargo.toml
tools/tui/: Cargo.toml
vm/: Cargo.toml  README.md  build.rs
vm/benches/: riscv_machine.rs
vm/src/: ark_serde.rs  circuit.rs  error.rs  eval.rs  instructions.rs  lib.rs  machines.rs  main.rs  memory.rs  riscv.rs  rv32.rs  syscalls.rs  trace.rs
vm/test/: .gitignore  fib_10.elf  fib_10_no_precompiles.elf  hello.elf  helloworld.elf  pi.elf  program_with_dummy_div.elf  program_with_no_precompiles.elf  program_with_two_precompiles.elf  puzzle.elf
(+926 files in other folders)
