[workspace]
resolver = "2"
members = [
    "runtime",
    "prover",
    "vm",
    "precompiles",
    "common",
    "core",
    "examples",
    "tests/testing-framework",
]
default-members = ["runtime", "prover", "vm", "precompiles", "common", "core"]

[workspace.package]
edition = "2021"
version = "0.2.3"
authors = ["The Nexus Team <hello@nexus.xyz>"]
homepage = "https://nexus.xyz/"
repository = "https://github.com/nexus-xyz/nexus-zkvm/"
keywords = ["nexus", "zero-knowledge", "zkvm", "cryptography", "proofs"]
categories = ["cryptography"]
publish = false

[workspace.dependencies]
clap = { version = "4.3", features = ["derive"] }
num-traits = "0.2"
num-derive = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
stwo-prover = { git = "https://github.com/starkware-libs/stwo", rev = "4aa5a22a91158f38cb38f08a4a4df37115245eb4" }

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
inherits = "release"
debug = true
