[workspace]
resolver = "2"
members = [
    "runtime",
    "examples",
    "vm",
    "cli",
    "cli/progress-bar",
    "config",
    "config/serde_wrapper",
    "network",
    "network/rpc/common",
    "network/rpc/traits",
    "nova",
    "spartan",
    "core",
    "jolt",
    "sdk", 
    "macro",
    "macro/profiler",
]
default-members = [
    "vm",
    "cli",
    "network",
    "nova",
    "runtime",
    "spartan",
    "core",
    "sdk",
]
exclude = ["nova-benches"]

[workspace.package]
edition = "2021"
version = "0.2.4"
authors = ["The Nexus Team <hello@nexus.xyz>"]
homepage = "https://nexus.xyz/"
repository = "https://github.com/nexus-xyz/nexus-zkvm/"
keywords = ["nexus", "zero-knowledge", "zkvm", "cryptography", "proofs"]
categories = ["cryptography"]
publish = false

[workspace.dependencies]
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
elf = { version = "0.7", default-features = false, features = ["std"] }

jsonrpsee = { version = "0.23", default-features = false }

sha3 = { version = "0.10", default-features = false }
hex = { version = "0.4.3" }

ark-crypto-primitives = { version = "0.5.0", features = [
    "r1cs",
    "sponge",
    "crh",
    "merkle_tree",
] }
ark-std = "0.5.0"

ark-relations = { version = "0.5.0" }
ark-r1cs-std = { version = "0.5.0" }

ark-ff = "0.5.0"
ark-ec = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", features = ["derive"] }
ark-poly = "0.5.0"
ark-poly-commit = "0.5.0"

ark-bn254 = "0.5.0"
ark-grumpkin = "0.5.0"
ark-pallas = "0.5.0"
ark-vesta = "0.5.0"
ark-test-curves = { version = "0.5.0", features = ["bls12_381_curve"] }

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
inherits = "release"
debug = true
