[package]
name = "nexus-benchmarks"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
nexus-common = { path = "../common" }
nexus-vm = { path = "../vm" }
nexus-vm-prover = { path = "../prover" }
nexus-common-testing = { path = "../common-testing" }
postcard = { version = "1.0.10", features = ["alloc"] }
serde.workspace = true
tempfile = "3.10"
chrono = "0.4"
libc = "0.2"
plotly = "0.12.1"
csv = "1.3.0"
num_cpus = "1.16"
sys-info = "0.9"
sysinfo = "0.33.1"

[dev-dependencies]
serial_test = "3.2.0"

[[bench]]
name = "benches"
path = "benches/integration_bench.rs"
harness = true
