[package]
name = "nexus-common"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rrs-lib = { git = "https://github.com/GregAC/rrs/" }
thiserror = "2.0"
variant_count = "1.1"

serde.workspace = true
