[package]
name = "nexus-core"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
nexus-vm = { path = "../vm" }
nexus-vm-prover = { path = "../prover" }
nexus-common = { path = "../common" }

[profile.release]
opt-level = "z"
panic = "abort"
