[package]
name = "dummy_program"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
[lib]
crate-type = ["staticlib"]

[profile.release]
opt-level = "z"