[package]
name = "example"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
nexus-rt = { path = "../runtime" }
postcard = { version = "1.0.8", features = ["alloc"] }
serde = { version = "1.0", default-features = false }

[features]
jolt-io = ["nexus-rt/jolt-io"]

[lints.clippy]
print_with_newline = { level = "allow", priority = 0 }
needless_range_loop = { level = "allow", priority = 0 }
manual_memcpy = { level = "allow", priority = 0 }
