[package]
name = "nexus-examples"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
bincode = "1.3"
byte-unit = "5.1"
clap = { workspace = true }
humantime = "2.1"
num-traits = { workspace = true }
serde = { workspace = true }
stwo-prover = { workspace = true }

nexus-vm-prover = { path = "../prover" }
