[package]
name = "nexus-jolt"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus-vm = { path = "../vm" }

tracing = { version = "0.1", default-features = false }
thiserror = "1.0"
rayon = "1.8"
strum = "0.25.0"

ark-bn254 = "0.4"

# latest commit on arkworks-compat
jolt-core = { git = "https://github.com/nexus-xyz/jolt", rev = "570e00a" }
jolt-common = { git = "https://github.com/nexus-xyz/jolt", rev = "570e00a", package = "common" }
