[package]
name = "nexus-network"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
default-run = "pcdnode"

[dependencies]
clap.workspace = true
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = [ "env-filter" ] }

async-channel = "1.9.0"
hyper = { version = "0.14", features = ["full"] }
http = "0.2.11"
fastwebsockets = { version = "0.4", features = ["upgrade"] }

snmalloc-rs = { version = "0.3.4", optional = true }

serde.workspace = true
serde_json.workspace = true
postcard = { version = "1.0", features = ["use-std"] }
lz4 = "1.24"

sha2 = "0.10.8"

ark-ff.workspace = true
ark-ec.workspace = true
ark-serialize.workspace = true

nexus-api = { path = "../api" }
hex = { workspace = true }

[features]
default = [ "snmalloc" ]
snmalloc = [ "snmalloc-rs" ]
