[package]
name = "nova-benches"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.5.0"
ark-relations = { version = "0.5.0" }
ark-r1cs-std = { version = "0.5.0" }
ark-crypto-primitives = { version = "0.5.0", features = ["sponge"] }

ark-pallas = "0.5.0"
ark-vesta = "0.5.0"
ark-bn254 = "0.5.0"
ark-grumpkin = "0.5.0"

criterion = "0.5"
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }

nexus-nova = { path = "../nova", default-features = false }

[features]
default = ["parallel"]
parallel = ["nexus-nova/parallel"]

[[bench]]
name = "nova"
harness = false

[[bench]]
name = "nova_public_parameter_generation"
harness = false

[[bench]]
name = "hypernova"
harness = false