[package]
name = "nexus-precompiles"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
nexus-common = { path = "../common" }
nexus-precompile-macros = { path = "macros", version = "0.1.0" }
thiserror = "1.0"

[dev-dependencies]
dummy-div = { path = "tests/dummy_div" }
