[package]
name = "nexus-precompiles"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
autotests = false

[[test]]
name = "integration"
path = "tests/integration.rs"

[dependencies]
nexus-precompile-macros = { path = "macros" }

[target.'cfg(not(target_arch = "riscv32"))'.dependencies]
nexus-common = { path = "../common" }

[dev-dependencies]
nexus-vm = { path = "../vm" }
