[package]
name = "prover-benches"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus-vm-prover = { path = "../prover" }
nexus-vm = { path = "../vm" }
nexus-common = { path = "../common" }

stwo-prover = { git = "https://github.com/starkware-libs/stwo", rev = "ba90cee" }

criterion = "0.5"

[[bench]]
name = "interaction_trace"
harness = false
