[package]
name = "nexus-vm-prover"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
nexus-vm-prover-macros = { path = "./macros" }
nexus-vm = { path = "../vm" }
nexus-common = { path = "../common" }

impl-trait-for-tuples = "0.2.2"
itertools = "0.13.0"
num-traits = { workspace = true }
stwo-prover = { workspace = true }
strum = "0.26.3"
strum_macros = "0.26.3"
rand = "0.8.5"

[dev-dependencies]
array2d = "0.3.2"
bincode = "1.3"
byte-unit = "5.1"
clap = { workspace = true }
humantime = "2.1"
serde = { workspace = true }
shh = "1.0.1"
