[package]
name = "nexus-vm-prover"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
nexus-vm-prover-macros = { path = "./macros" }
nexus-vm = { path = "../vm" }
nexus-common = { path = "../common" }

rayon = "1.10"

impl-trait-for-tuples = "0.2.2"
itertools = "0.13.0"
num-traits = { workspace = true }
stwo-prover = { workspace = true }
