[package]
name = "nexus-riscv"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
clap.workspace = true
serde.workspace = true
elf.workspace = true
thiserror = "1.0"

ark-ff.workspace = true
ark-relations.workspace = true
ark-r1cs-std.workspace = true
ark-serialize.workspace = true
ark-bn254.workspace = true
ark-crypto-primitives.workspace = true

[dev-dependencies]
ark-std.workspace = true
