[package]
name = "nexus-riscv"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
clap.workspace = true
elf.workspace = true
thiserror = "1.0"
num-traits = "0.2"

nexus-vm = { path = "../vm" }
