[package]
name = "nexus-rt"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
nexus-rt-macros = { path = "macros", version = "0.1.0" }
