[package]
name = "nexus-rt"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
nexus-rt-macros = { path = "macros", version = "0.1.0" }
postcard = { version = "1.0.8", features = ["alloc"] }
serde = { version = "1.0", default-features = false }

[features]
jolt-io = ["nexus-rt-macros/jolt-io"]

[lib]
doctest = false
