[package]
name = "nexus-rt"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
nexus-rt-macros = { path = "macros", version = "0.1.0" }
postcard = { version = "1.0.10", features = ["alloc", "use-crc"], default-features = false }
serde = { version = "1.0", default-features = false }

[target.'cfg(not(target_arch = "riscv32"))'.dependencies]
tiny-keccak.workspace = true

[lib]
doctest = false
